# easy-mark

./: .gitignore  Cargo.toml
src/: app.rs  assignment.rs  comment.rs  data.rs  display.rs  grade.rs  grade_sheet.rs  latex.rs  main.rs  writer.rs
src/data/: assignment.rs  comment.rs  latex.rs  mod.rs  question.rs
src/io/: app_file_ops.rs  app_view.rs  file_ops.rs  input.rs  mod.rs  view.rs
