[package]
name = "easy_mark"
version = "0.1.0"
authors = ["Strinsberg <stevedkom@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
read_input = "0.8"
serde = { version = "1.0", features = ["derive"] }
serde-pickle = "0.6"
rustyline = "8.0.0"
